Fixed wrapping issue when item plates were too long

--- a/css/styles.css
+++ b/css/styles.css
@@ -296,6 +296,7 @@ textarea.notes
 	.item-display 
 	{		
 		min-width: 45vw;
+		max-width: 45vw;
 	}
 	
 	.item-mods ul
